spacing fix, also caused more spacing issues lol

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,10 +20,13 @@ body {
 .sidebar {
     width: 20%;
     height: 100%;
+    
+    
     position: fixed;
     background-color: black;
     color: whitesmoke;
     padding-top: 5%;
+    
 }
 
 /*round the image into a circle, give it a solid white border*/
@@ -37,14 +40,16 @@ body {
 .sidebar h2, h3, p {
     padding-top: 5%;
     text-align: center;
+    
 }
 
 /*css for main div goes below here*/
 
 .main {
-    width: 80%;
+    width: 78%;
     height: 100%;
     float: right;
     background-color: gray;
-    border: 2%;
+    padding-top: 5%;
+    padding-left: 2%;
 }
